<resources>
    <string name="app_name">SharedPreferenceDemo</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Name:</string>
    <string name="user_pw">PassWord:</string>
    <string name="save_name">SaveName</string>
    <string name="login">Login</string>
    <string name="input_name">Please input name</string>
    <string name="input_pw">Please input password</string>
    <string name="cancel">Cancel</string>
</resources>
